Most popular authors on home page.

--- a/app/assets/stylesheets/users.css.sass
+++ b/app/assets/stylesheets/users.css.sass
@@ -2,6 +2,10 @@ form.edit_user
   .avatar
     margin-right: 10px
     margin-bottom: 10px
-.user.mini-profile
-  .avatar
-    margin-right: 10px
+
+.user
+  &.profile
+    .avatar
+      margin-right: 10px
+      
+        
