--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,12 +6,18 @@
     = link_to t(".sign_in"), new_user_session_path, class: "btn btn-primary"
     = link_to t(".sign_up"), new_user_registration_path, class: "btn btn-primary"
     
-.col-md-6
+.col-md-12
   .panel.panel-default
     .panel-heading
       %h2= t(".most_popular_games")
     .panel-body
-      = render @most_popular_games
+      = render @most_popular_games, column_size: 4
+.col-md-6
+  .panel.panel-default
+    .panel-heading
+      %h2= t(".most_popular_authors")
+    .panel-body
+      = render @most_popular_authors
 .col-md-6
   .panel.panel-default
     .panel-heading
