--- a/app/views/users/_mini_profile.html.haml
+++ b/app/views/users/_mini_profile.html.haml
@@ -1,4 +1,4 @@
-.user.mini-profile  
+.user.profile.profile-mini
   = link_to user do
     .pull-left
       = image_tag user.avatar.thumb.url, class: "img-circle img-xs avatar"
