--- a/app/views/games/_aside_panel.html.haml
+++ b/app/views/games/_aside_panel.html.haml
@@ -2,15 +2,12 @@
   .panel.panel-default
     .panel-heading
       - if can? :edit, @game
-        .btn-group.pull-right
-          .btn.btn-default.dropdown-toggle{ "data-toggle" => :dropdown }
-            %span.caret
-          %ul.dropdown-menu
-            %li= link_to t(".publish"), [:publish, @game],
-                data: { confirm: t("questions.confirm") } if can?(:publish, @game)
-            %li= link_to t(".edit_game"), [:edit, @game] if can?(:edit, @game)
-            %li= link_to t(".destroy_game"), @game, method: :delete,
-              data: { confirm: t("questions.confirm") } if can?(:destroy, @game)
+        = caret_menu do
+          %li= link_to t(".publish"), [:publish, @game],
+              data: { confirm: t("questions.confirm") } if can?(:publish, @game)
+          %li= link_to t(".edit_game"), [:edit, @game] if can?(:edit, @game)
+          %li= link_to t(".destroy_game"), @game, method: :delete,
+            data: { confirm: t("questions.confirm") } if can?(:destroy, @game)
       = render "users/mini_profile", user: @game.owner
       .clearfix
       = game_header
@@ -22,6 +19,10 @@
         = action_link_to t(".all_paragraphs"), [@game, :paragraphs], if: can?(:edit, @game)
     
     .panel-footer
-      = action_link_to t(".play"), [@game, @game.first_paragraph],
-        if: can?(:play, @game), class: %w(btn btn-primary)
+      - if @paragraph.persisted?
+        = link_to t(".save_game"), [:save, @game, @paragraph],
+          class: %w(btn btn-primary)
+      - else
+        = action_link_to t(".play"), [@game, @game.first_paragraph],
+          if: can?(:play, @game), class: %w(btn btn-primary)
         
