User can load the game save.

--- a/app/views/games/_aside_panel.html.haml
+++ b/app/views/games/_aside_panel.html.haml
@@ -1,4 +1,5 @@
-.col-md-4.col-sm-6
+- centered ||= false
+.col-md-4.col-sm-6{ class: centered && "col-md-offset-4 col-sm-offset-3" }
   .panel.panel-default
     .panel-heading
       - if can? :edit, @game
@@ -14,15 +15,22 @@
       %p= @game.description
       
     .panel-body
-      .btn-group-vertical
+      .btn-group-vertical.btn-group-responsive
         = action_link_to t(".new_paragraph"), [:new, @game, :paragraph], if: can?(:edit, @game)
         = action_link_to t(".all_paragraphs"), [@game, :paragraphs], if: can?(:edit, @game)
+      .clearfix
+      %br
+      = render "games/mark_form"
     
     .panel-footer
-      - if @paragraph.persisted?
-        = link_to t(".save_game"), [:save, @game, @paragraph],
-          class: %w(btn btn-primary)
-      - else
-        = action_link_to t(".play"), [@game, @game.first_paragraph],
-          if: can?(:play, @game), class: %w(btn btn-primary)
+      .btn-group
+        - if @paragraph && @paragraph.persisted?
+          = link_to t(".save_game"), [:save, @game, @paragraph],
+            class: %w(btn btn-primary)
+        - else
+          = action_link_to t(".play"), [@game, @game.first_paragraph],
+            if: can?(:play, @game), class: %w(btn btn-primary)
+        - if @save
+          = action_link_to t(".load_game"), [@game, @save.paragraph],
+            class: %w(btn btn-primary)
         
