--- a/app/views/games/_aside_panel.html.haml
+++ b/app/views/games/_aside_panel.html.haml
@@ -19,11 +19,7 @@
         = action_link_to t(".new_paragraph"), [:new, @game, :paragraph], if: can?(:edit, @game)
         = action_link_to t(".all_paragraphs"), [@game, :paragraphs], if: can?(:edit, @game)
       .clearfix
-      %br
-      = render "games/mark_form"
-    
-    .panel-footer
-      .btn-group
+      .btn-group.btn-group-justified
         - if @paragraph && @paragraph.persisted?
           = link_to t(".save_game"), [:save, @game, @paragraph],
             class: %w(btn btn-primary)
@@ -33,4 +29,7 @@
         - if @save
           = action_link_to t(".load_game"), [@game, @save.paragraph],
             class: %w(btn btn-primary)
+    
+    .panel-footer
+      = render "games/mark_form"
         
