--- a/app/views/games/_mark_form.html.haml
+++ b/app/views/games/_mark_form.html.haml
@@ -1,5 +1,5 @@
 %strong= t(".your_mark")
-= simple_form_for [@game, @mark], html: { class: "form-inline mark" } do |f|
+= simple_form_for @mark, url: [@game, :mark], html: { class: "form-inline mark" } do |f|
   = f.input :value, as: :enumeration, include_blank: false,
     label: t(".your_mark"),
     label_html: { class: "sr-only" }
