--- a/app/views/saves/confirmation.html.haml
+++ b/app/views/saves/confirmation.html.haml
@@ -2,5 +2,5 @@
   .panel-heading
     = t(".are_you_sure")
   .panel-body
-    = action_link_to t(".yes"), save_game_paragraph_path(confirm: 1), method: :post
+    = action_link_to t(".yes"), save_game_paragraph_path(confirm: 1)
     = action_link_to t(".no"), [@game, @paragraph]
