Main nav menu fixed.

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -1,20 +1,17 @@
 .header-navbar
   #main-nav
-    margin-left: 10px
-  .user.profile-mini
-    margin-top: 5px
-  .navbar-text.visible-xs
+    .profile-mini
+      padding: 5px 15px 0 15px
+      > a
+        width: 100%
+  .navbar-text
     .game-name
-      margin-left: 8px
-      margin-right: 30px
-      display: inline-block
       .stars
         display: inline-block
-    .avatar
-      display: inline-block
-      position: absolute
-      top: 5px
-      right: 65px
 a:hover
   img
     opacity: 0.6
+    
+.user.profile
+  > a
+    display: inline-block
