--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -6,30 +6,30 @@
         = hamburger_toggler
       = link_to "Tales", root_url, class: "navbar-brand"
       
-      .navbar-text.visible-xs
-        - if @game
-          .game-name
-            = link_to @game do
-              %strong= @game.name_with_stars
-        - if current_user
-          = link_to current_user, class: "avatar pull-right" do
-            = image_tag current_user.avatar.thumb.url, class: "img-circle img-xs"
-              
+    .navbar-text
+      - if @game
+        .game-name.visible-xs
+          = link_to @game do
+            %strong= @game.name_with_stars
     
-    #main-nav.collapse.navbar-collapse.pull-right
+    #main-nav.collapse.navbar-collapse
+      %ul.nav.navbar-nav.visible-xs
+        - if current_user
+          %li= render "users/mini_profile", user: current_user
+      
+      = form_tag games_path, method: :get, class: "navbar-form navbar-left",
+        role: :search do
+        .form-group
+          = text_field_tag :q, "", class: "form-control", placeholder: t(".search_query")
+        = submit_tag t(".submit_search"), name: nil, class: "btn btn-default"
       %ul.nav.navbar-nav.navbar-right
         - if current_user
+          %li.hidden-xs= render "users/mini_profile", user: current_user
           %li= link_to t(".sign_out"), destroy_user_session_path, method: :delete
         - else
           %li= link_to t(".sign_up"), new_user_registration_path
           %li= link_to t(".sign_in"), new_user_session_path
           %li= link_to t(".sign_up_with_facebook"), user_omniauth_authorize_path(:facebook)
           
-    %ul.nav.navbar-nav.navbar-right.hidden-xs
-      - if current_user
-        %li= render "users/mini_profile", user: current_user
         
-    = form_tag games_path, method: :get, class: "navbar-form navbar-left",
-      role: :search do
-      = text_field_tag :q, "", class: "form-control", placeholder: t(".search_query")
-      = submit_tag t(".submit_search"), name: nil, class: "btn btn-default"
+
