Fixed some mark related issues.

--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -7,7 +7,7 @@
       = link_to "Tales", root_url, class: "navbar-brand"
       
     .navbar-text
-      - if @game
+      - if @game && @game.persisted?
         .game-name.visible-xs
           = link_to @game do
             %strong= @game.name_with_stars
