--- a/app/views/games/_aside_panel.html.haml
+++ b/app/views/games/_aside_panel.html.haml
@@ -22,7 +22,7 @@
       .btn-group.btn-group-justified
         - if @paragraph && @paragraph.persisted?
           = link_to t(".save_game"), [:save, @game, @paragraph],
-            class: %w(btn btn-primary)
+            class: %w(btn btn-primary) if can?(:save, @game)
         - else
           = action_link_to t(".play"), [@game, @game.first_paragraph],
             if: can?(:play, @game), class: %w(btn btn-primary)
