User mini profile for user without stars.

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -15,3 +15,8 @@ a:hover
 .user.profile
   > a
     display: inline-block
+  .nickname
+    padding: 10px 0
+  &.with-stars
+    .nickname
+      padding: 0
