--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -23,7 +23,8 @@
                 placeholder: t(".search_query")
               = hidden_field_tag :order, @search_params[:order]
             = submit_tag t(".submit_search"), name: nil, class: "btn btn-default"
-    = paginate @games, outer_window: 2, window: 2
+    .visible-xs
+      = paginate @games, outer_window: 2, window: 2
     
   .panel-body
     = render @games
