--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -24,6 +24,7 @@
         = submit_tag t(".submit_search"), name: nil, class: "btn btn-default"
       %ul.nav.navbar-nav.navbar-right
         - if current_user
+          %li= link_to t(".manage_users"), users_path if can?(:index, User)
           %li.hidden-xs= render "users/mini_profile", user: current_user
           %li= link_to t(".sign_out"), destroy_user_session_path, method: :delete
         - else
