Game name for game show fixed.

--- a/app/views/games/_aside_panel.html.haml
+++ b/app/views/games/_aside_panel.html.haml
@@ -11,6 +11,7 @@
             data: { confirm: t("questions.confirm") } if can?(:destroy, @game)
       = render "users/mini_profile", user: @game.owner
       .clearfix
+      - title @game.name
       = game_header
       %p= @game.description
       
