--- a/app/views/users/_aside_profile.html.haml
+++ b/app/views/users/_aside_profile.html.haml
@@ -10,10 +10,10 @@
         .btn-group-vertical.btn-group-responsive
           = action_link_to t(".edit_profile"), edit_user_registration_path,
             if: can?(:edit, user)
-        .btn-group-responsive.btn-group-vertical
-          = action_link_to t(".saves"), saves_index_path,
-            if: current_user
-          = action_link_to t(".games"), user_games_path(@user)
+        - if current_user == user
+          .btn-group-responsive.btn-group-vertical
+            = action_link_to t(".saves"), saves_index_path
+            = action_link_to t(".games"), user_games_path(@user)
         .btn-group-vertical.btn-group-responsive
           = action_link_to t(".new_game"), new_game_path,
             if: can?(:create, user.games.build)
