--- a/app/views/paragraphs/show.html.haml
+++ b/app/views/paragraphs/show.html.haml
@@ -49,12 +49,13 @@
                 new_game_paragraph_path(params: { choice_id: choice.id })
                 
           .clearfix
-                
+
+    .btn-group-responsive                
+      = action_link_to t(".new_choice"), [:new, @game, @paragraph, :choice],
+        if: can?(:new, Choice.new(parent_paragraph: @paragraph))
+  
     - if @paragraph.final?
       = render "games/mark_form"
                 
-    = action_link_to t(".new_choice"), [:new, @game, @paragraph, :choice],
-      if: can?(:new, Choice.new(parent_paragraph: @paragraph))
-  
 
 
