--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,5 +19,9 @@
       .container
         = yield
     
-    - if content_for? :footer
-      = yield(:footer)
+    %footer
+      %nav.navbar.visible-xs.navbar-default
+        .container
+          - if content_for? :footer_content
+            = yield(:footer_content)
+          %p.masters_notice= t(".masters_notice")
