--- a/app/views/layouts/game.html.haml
+++ b/app/views/layouts/game.html.haml
@@ -3,5 +3,6 @@
     = render "games/aside_panel" if @game
     .col-md-8.col-sm-6
       = yield
+    = render "footer"
 
 = render template: "layouts/application"
