--- a/app/views/layouts/authorization.html.haml
+++ b/app/views/layouts/authorization.html.haml
@@ -2,5 +2,6 @@
   .container.col-lg-4.col-lg-offset-4.col-sm-6.col-sm-offset-3
     .panel.panel-default
       = yield
+    = render "footer"
 
 = render template: "layouts/application"
