Cannot publish invalid game.

--- a/app/views/layouts/game.html.haml
+++ b/app/views/layouts/game.html.haml
@@ -3,6 +3,7 @@
     = render "games/aside_panel" if @game
     .col-md-8.col-sm-6
       = yield
+  .container
     = render "footer"
 
 = render template: "layouts/application"
