--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -1,4 +1,4 @@
 = simple_form_for @game do |f|
-  = f.input :name
+  = f.input :name, autofocus: true
   = f.input :description
   = f.button :submit
