Add Final mark to final paragraphs.

--- a/app/views/paragraphs/show.html.haml
+++ b/app/views/paragraphs/show.html.haml
@@ -30,6 +30,8 @@
     = simple_format @paragraph.content
 
   .panel-footer
+    - if @paragraph.final?
+      %strong= t(".final")
     .list-group
       - @children_choices.each do |choice|
         .list-group-item
