--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -20,6 +20,6 @@
 .col-md-6
   .panel.panel-default
     .panel-heading
-      %h2= link_to t(".latest_games"), games_path(latest: true)
+      %h2= link_to t(".latest_games"), games_path(order: :latest)
     .panel-body
       = render @latest_games
