Hide login overflow

--- a/app/views/users/_aside_profile.html.haml
+++ b/app/views/users/_aside_profile.html.haml
@@ -1,5 +1,5 @@
 .col-md-3.col-sm-12
-  .panel.panel-default.text-center
+  .panel.panel-default.text-center.aside-profile
     .panel-body
       .col-sm-6.col-md-12
         = link_to user do
